--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.13",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "curtainsjs": "^8.1.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "^0.14.10"
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.13",
+    "@types/curtainsjs": "^8.1.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
