--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest --verbose",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +27,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "curtainsjs": "^8.1.6",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "zone.js": "^0.15.0"
   },
@@ -33,13 +36,9 @@
     "@angular/cli": "^19.1.7",
     "@angular/compiler-cli": "^19.1.6",
     "@types/curtainsjs": "^8.1.3",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.1",
     "typescript": "~5.5.2"
   }
 }
