--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@types/curtainsjs": "^8.1.3",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "jest-canvas-mock": "^2.5.2",
     "jest-preset-angular": "^14.5.1",
+    "resize-observer-polyfill": "^1.5.1",
     "typescript": "~5.5.2"
   }
 }
